ingress/zabbix-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web-ingress
  namespace: git
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - <DNS>
    secretName: "letsencrypt-zabbix-tls"
  rules:
  - host: <DNS>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zabbix-web-service
            port:
              number: 80
